--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   }
 }
