--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An app for my books",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "start": "node server/index.js",
     "client": "npm run start --prefix client",
     "server": "nodemon server/index.js",
